Create User factory, send info to server - success

--- a/www/templates/profile/edit.html
+++ b/www/templates/profile/edit.html
@@ -5,7 +5,7 @@
         Cancel
       </button>
     </div>
-    <h1 class="title">Create an Activity</h1>
+    <h1 class="title">Update Profile</h1>
     <div class="buttons">
       <button class="button button-clear" ng-click="updateProfile()">
         Update
