--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -24,7 +24,7 @@
 }
 
 .gray {
-  background-color: #cccccc;
+  background-color: #f2f2f2;
 }
 
 .card-bottom {
@@ -312,4 +312,13 @@ COMMENTS
   text-align: right;
   font-size: 90%;
   color: rgba(77, 77, 77, 0.52);
+}
+
+show-activity-feed {
+  .card {
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+
+  }
 }
