--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -38,55 +38,61 @@
     </div>
 
 
-    <div class="item item-divider">
-      <div class="row row-no-padding row-bottom buttons-row">
+    <div class="item item-divider row-no-padding">
+      <div class="button-bar">
 
-        <div class="col col-10" ng-if=activity.user.likes ng-click="unlikeActivity(activity.id);
-          activity.user.likes = !activity.user.likes; activity.likes_count = activity.likes_count - 1;">
-          <a class="button button-block auth-button">
-            <i class="icon ion-thumbsup card-bottom"></i>
-          </a>
+        <div class="col col-25">
+          <span ng-if=activity.user.likes ng-click="unlikeActivity(activity.id);
+            activity.user.likes = !activity.user.likes; activity.likes_count = activity.likes_count - 1;">
+            <a class="button blue">
+              <i class="icon ion-thumbsup"></i>
+            </a>
+          </span>
+
+          <div ng-if=!activity.user.likes ng-click="likeActivity(activity.id, $event);
+            activity.user.likes = !activity.user.likes; activity.likes_count = activity.likes_count + 1;">
+            <a class="button">
+              <i class="icon ion-thumbsup"></i>
+            </a>
+          </div>
         </div>
 
-        <div class="col col-10" ng-if=!activity.user.likes ng-click="likeActivity(activity.id, $event);
-          activity.user.likes = !activity.user.likes; activity.likes_count = activity.likes_count + 1;">
-          <button class="button button-block auth-button">
-            <i class="icon ion-thumbsup card-bottom"></i>
-          </button>
-        </div>
-
-        <div class="col col-10" ng-if=activity.user.saves ng-click="unsaveActivity(activity.id);
+      <div class="col col-25">
+        <span ng-if=activity.user.saves ng-click="unsaveActivity(activity.id);
           activity.user.saves = !activity.user.saves; activity.saves_count = activity.saves_count - 1;">
-          <button class="button button-block auth-button">
-            <i class="icon ion-bookmark card-bottom"></i>
-          </button>
-        </div>
+          <a class="button blue">
+            <i class="icon ion-bookmark"></i>
+          </a>
+        </span>
 
-        <div class="col col-10" ng-if=!activity.user.saves ng-click="saveActivity(activity.id);
+        <span ng-if=!activity.user.saves ng-click="saveActivity(activity.id);
              activity.user.saves = !activity.user.saves; activity.saves_count = activity.saves_count + 1;">
-          <button class="button button-block auth-button">
-            <i class="icon ion-bookmark card-bottom"></i>
-          </button>
-        </div>
+          <a class="button">
+            <i class="icon ion-bookmark"></i>
+          </a>
+        </span>
+      </div>
 
-        <div class="col col-10" ng-if=activity.user.following ng-click="unfollowUser(activity.user.id);
+        <div class="col col-25">
+        <span ng-if=activity.user.following ng-click="unfollowUser(activity.user.id);
           activity.user.following = !activity.user.following; activity.user.followers_count = activity.user.followers_count - 1">
-          <button class="button button-block auth-button">
-            <i class="icon ion-person card-bottom"></i>
-          </button>
-        </div>
+          <a class="button blue">
+            <i class="icon ion-person"></i>
+          </a>
+        </span>
 
-        <div class="col col-10" ng-if=!activity.user.following ng-click="followUser(activity.user.id);
+        <span ng-if=!activity.user.following ng-click="followUser(activity.user.id);
           activity.user.following = !activity.user.following; activity.user.followers_count = activity.user.followers_count + 1">
-          <button class="button button-block auth-button">
-            <i class="icon ion-person card-bottom"></i>
-          </button>
+          <a class="button">
+            <i class="icon ion-person"></i>
+          </a>
+        </span>
         </div>
 
-        <div class='col col-10'></div>
-          <button class="button button-block auth-button">
-            <i class="icon ion-chatboxes card-bottom"></i>
-          </button>
+        <div class="col col-25">
+          <a class="button">
+            <i class="icon ion-chatboxes"></i>
+          </a>
         </div>
 
       </div>
