--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -49,6 +49,8 @@
 .difficulty-icon {
   display: block;
   text-align: right;
+  padding-left: 10px !important;
+  padding-right: 10px !important;
 }
 
 .activity-category {
