--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -7,6 +7,15 @@
       <p>{{activity.created_at}}</p>
     </div>
 
+    <div class="item item-divider row-no-padding">
+        <span class="difficulty-icon">
+          <span class="activity-category">{{activity.category}}</span>
+          <i class="icon ion-ios-ionic-outline" ng-if="activity.difficulty === 1"></i>
+          <i class="icon ion-ios-ionic" ng-if="activity.difficulty === 2"></i>
+          <i class="icon ion-social-angular" ng-if="activity.difficulty === 3"></i>
+        </span>
+    </div>
+
     <div ng-click="navigateToActivity(activity)">
       <display-first-image images_for="{{activity}}"></display-first-image>
     </div>
@@ -20,15 +29,6 @@
         {{activity.body}}
       </p>
     </div>
-
-      <div class="row">
-        <span class="difficulty-icon">
-          <span class="activity-category">{{activity.category}}</span>
-          <i class="icon ion-ios-ionic-outline" ng-if="activity.difficulty === 1"></i>
-          <i class="icon ion-ios-ionic" ng-if="activity.difficulty === 2"></i>
-          <i class="icon ion-social-angular" ng-if="activity.difficulty === 3"></i>
-        </span>
-      </div>
 
     <div class="row">
       <p ng-repeat="interest in activity.user.interests">
