--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -70,6 +70,11 @@
   content: url('../img/icons/bars3.png') !important;
 }
 
+.mybadge {
+  margin-right: 5px;
+  margin-left: 5px;
+}
+
 .activity-images {
   margin: 5px auto 5px auto;
   text-align: center;
