Change background color and center buttons

--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -326,6 +326,13 @@ show-activity-feed {
     margin-top: 0;
     margin-left: 0;
     margin-right: 0;
+  }
 
+  .col {
+    text-align: center;
+  }
+
+  .white {
+    background-color: #FFFFFF;
   }
 }
