--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -1,6 +1,6 @@
 <ion-view title="Activities">
   <ion-nav-buttons side="left">
-    <button class="button button-icon icon ion-funnel" ng-click="filterModal.show()"></button>
+    <button class="button button-icon icon ion-ios-color-filter-outline" ng-click="filterModal.show()"></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right">
     <button class="button button-icon icon ion-plus-round" ng-click="createModal.show()"></button>
