--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -37,7 +37,7 @@
     </div>
 
 
-    <div class="item item-divider row-no-padding">
+    <div class="item item-divider row-no-padding white">
       <div class="button-bar">
 
         <div class="col col-25">
@@ -50,7 +50,7 @@
 
           <div ng-if=!activity.user.likes ng-click="likeActivity(activity.id, $event);
             activity.user.likes = !activity.user.likes; activity.likes_count = activity.likes_count + 1;">
-            <a class="button">
+            <a class="button white">
               <i class="icon ion-thumbsup"></i>
             </a>
           </div>
@@ -66,7 +66,7 @@
 
         <span ng-if=!activity.user.saves ng-click="saveActivity(activity.id);
              activity.user.saves = !activity.user.saves; activity.saves_count = activity.saves_count + 1;">
-          <a class="button">
+          <a class="button white">
             <i class="icon ion-bookmark"></i>
           </a>
         </span>
@@ -82,14 +82,14 @@
 
         <span ng-if=!activity.user.following ng-click="followUser(activity.user.id);
           activity.user.following = !activity.user.following; activity.user.followers_count = activity.user.followers_count + 1">
-          <a class="button">
+          <a class="button white">
             <i class="icon ion-person"></i>
           </a>
         </span>
         </div>
 
         <div class="col col-25" ng-click="navigateToActivity(activity)">
-          <a class="button">
+          <a class="button white">
             <i class="icon ion-chatboxes"></i>
           </a>
         </div>
