Remove user interests + change background on buttons

--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -21,20 +21,13 @@
       </p>
     </div>
 
-    <div class="row">
-      <p ng-repeat="interest in activity.user.interests">
-        <i class="mybadge badge-royal">{{interest.name | limitTo: 40}}</i>
-      </p>
-    </div>
-
-
     <div class="item item-divider row-no-padding white">
       <div class="button-bar">
 
         <div class="col col-25">
           <span ng-if=activity.user.likes ng-click="unlikeActivity(activity.id);
             activity.user.likes = !activity.user.likes; activity.likes_count = activity.likes_count - 1;">
-            <a class="button blue">
+            <a class="button white blue">
               <i class="icon ion-thumbsup"></i>
             </a>
           </span>
@@ -47,36 +40,36 @@
           </div>
         </div>
 
-      <div class="col col-25">
-        <span ng-if=activity.user.saves ng-click="unsaveActivity(activity.id);
-          activity.user.saves = !activity.user.saves; activity.saves_count = activity.saves_count - 1;">
-          <a class="button blue">
-            <i class="icon ion-bookmark"></i>
-          </a>
-        </span>
+        <div class="col col-25">
+          <span ng-if=activity.user.saves ng-click="unsaveActivity(activity.id);
+            activity.user.saves = !activity.user.saves; activity.saves_count = activity.saves_count - 1;">
+            <a class="button white blue">
+              <i class="icon ion-bookmark"></i>
+            </a>
+          </span>
 
-        <span ng-if=!activity.user.saves ng-click="saveActivity(activity.id);
-             activity.user.saves = !activity.user.saves; activity.saves_count = activity.saves_count + 1;">
-          <a class="button white">
-            <i class="icon ion-bookmark"></i>
-          </a>
-        </span>
-      </div>
+          <span ng-if=!activity.user.saves ng-click="saveActivity(activity.id);
+               activity.user.saves = !activity.user.saves; activity.saves_count = activity.saves_count + 1;">
+            <a class="button white">
+              <i class="icon ion-bookmark"></i>
+            </a>
+          </span>
+        </div>
 
         <div class="col col-25">
-        <span ng-if=activity.user.following ng-click="unfollowUser(activity.user.id);
-          activity.user.following = !activity.user.following; activity.user.followers_count = activity.user.followers_count - 1">
-          <a class="button blue">
-            <i class="icon ion-person"></i>
-          </a>
-        </span>
+          <span ng-if=activity.user.following ng-click="unfollowUser(activity.user.id);
+            activity.user.following = !activity.user.following; activity.user.followers_count = activity.user.followers_count - 1">
+            <a class="button white blue">
+              <i class="icon ion-person"></i>
+            </a>
+          </span>
 
-        <span ng-if=!activity.user.following ng-click="followUser(activity.user.id);
-          activity.user.following = !activity.user.following; activity.user.followers_count = activity.user.followers_count + 1">
-          <a class="button white">
-            <i class="icon ion-person"></i>
-          </a>
-        </span>
+          <span ng-if=!activity.user.following ng-click="followUser(activity.user.id);
+            activity.user.following = !activity.user.following; activity.user.followers_count = activity.user.followers_count + 1">
+            <a class="button white white">
+              <i class="icon ion-person"></i>
+            </a>
+          </span>
         </div>
 
         <div class="col col-25" ng-click="navigateToActivity(activity)">
