--- a/www/templates/activities/show.html
+++ b/www/templates/activities/show.html
@@ -60,8 +60,9 @@
 
             <span ng-if=!activity.user.saves ng-click="saveActivity(activity.id);
             activity.user.saves = !activity.user.saves; activity.saves_count = activity.saves_count + 1;">
-              <a class="button white"></a>
-              <i class="icon ion-bookmark"></i>
+              <a class="button white">
+                <i class="icon ion-bookmark"></i>
+              </a>
             </span>
           </div>
 
