--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -313,3 +313,16 @@ COMMENTS
   font-size: 90%;
   color: rgba(77, 77, 77, 0.52);
 }
+
+
+.col-50 {
+  border-color: #b2b2b2;
+}
+
+.button-followings {
+  color: #46a3c2;
+}
+
+.followings-list {
+  padding-top: 27px;
+}
