Divide routes and waypoints into divs and add color to words

--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -106,6 +106,12 @@
   color: #fff;
 }
 
+.routes {
+  color: #4ea4be;
+  font-weight: bold;
+  padding-right: 5px;
+}
+
 
 /*****************
 PROFILE
