--- a/www/templates/activities/show.html
+++ b/www/templates/activities/show.html
@@ -27,8 +27,14 @@
       <div class="padding">
         <h3>{{activity.title}}</h3>
         <p>{{activity.body}}</p>
-        <p>Routes {{activity.routes.length}}</p>
-        <p>Waypoints {{activity.waypoints.length}}</p>
+        <div class="row">
+          <div class="routes">Routes</div>
+          <div class="activity-routes">{{activity.routes.length}}</div>
+        </div>
+        <div class="row">
+          <div class="routes">Waypoints</div>
+          <div class="activity-routes">{{activity.waypoints.length}}</div>
+        </div>
       </div>
 
       <div class="item item-divider row-no-padding white">
