Uncomment small-map

--- a/www/templates/activities/show.html
+++ b/www/templates/activities/show.html
@@ -14,7 +14,7 @@
 
       <div class="item item-body">
         <!-- place map container here-->
-        <!--<div id="small-map"></div>-->
+        <div id="small-map"></div>
 
 
       <ion-slide-box  on-slide-changed="nextSlide($index)">
