--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -4,8 +4,15 @@
   padding-top: 7px;
 }
 
-tab-item-active {
+.tab-item-active {
   padding-top: 7px;
+}
+
+.item-body {
+  overflow: auto;
+  padding: 0px;
+  text-overflow: inherit;
+  white-space: normal;
 }
 
 .eighty_percent {
