--- a/www/templates/profile/my-saved-activities.html
+++ b/www/templates/profile/my-saved-activities.html
@@ -1,8 +1,7 @@
 <ion-view title="My Saved Activities" ng-init="showSavedActivities()">
   <ion-nav-buttons side="right">
-    <button class="button button-icon icon ion-plus-round"
+    <button class="button button-icon icon ion-ios-plus-empty"
             ng-controller="activitiesController" ng-click="createModal.show()"></button>
-    <button class="button button-icon icon ion-ios-plus-empty" ng-controller="activitiesController" ng-click="createModal.show()"></button>
   </ion-nav-buttons>
 
   <ion-content class="gray" activities="mySaves">
