--- a/www/templates/auth/login.html
+++ b/www/templates/auth/login.html
@@ -21,8 +21,8 @@
           <form class="row form-container" novalidate>
             <div class="col">
               <div class="list">
-                <div class="item item-divider">
-                  <span>or log in using email</span>
+                <div class="item item-divider center">
+                  <h2>or log in using email</h2>
                 </div>
                 <div class="item item-divider" ng-if="errorMessage">
                   <span class="error-message" ng-bind="errorMessage"></span>
