Design changes to sign up

--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -241,3 +241,15 @@ COMMENTS
   font-size: 90%;
   color: rgba(77, 77, 77, 0.52);
 }
+
+/**************
+SIGN UP
+ */
+
+.sign-up {
+  padding-top: 30px;
+}
+
+.black {
+  color: #333;
+}
