--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -353,3 +353,27 @@ COMMENTS
 .followings-list {
   padding-top: 27px;
 }
+
+/**************
+ SIGN UP
+*/
+
+.sign-up {
+  padding-top: 30px;
+}
+
+.log-in {
+  margin-bottom: 40px;
+}
+
+.black {
+  color: #333;
+}
+
+.login-button {
+  padding-left: 0px;
+}
+
+.forgot-password-button {
+  color: #333 !important;
+}
