refactors the password reset flow

--- a/www/templates/auth/password_reset.html
+++ b/www/templates/auth/password_reset.html
@@ -12,25 +12,27 @@
         <div class="col">
           <form class="row form-container" novalidate>
             <div class="col">
-              <div class="list">
+              <div class="list log-in">
                 <div class="item item-divider">
                   <span>Request passsword reset</span>
                 </div>
                 <div class="item item-divider" ng-if="errorMessage">
                   <span class="error-message" ng-bind="errorMessage"></span>
                 </div>
-                <div class="item item-divider" ng-if="infoMessage">
-                  <p class="success-message" ng-bind="successMessage"></p>
+                <div class="item item-divider" ng-if="successMessage">
+                  <span class="success-message" ng-bind="successMessage"></span>
                 </div>
-                <label class="item item-input item-stacked-label">
-                  <span class="input-label">Email</span>
-                  <input type="email" placeholder="required" ng-model="credentials.email">
-                </label>
               </div>
-              <button class="button action-button button-block button-balanced" ng-click="requestPassword()">REQUEST PASSWORD RESET</button>
-              <div class="col alt-actions-container">
+              <div class="col alt-actions-container" ng-if="!successMessage">
+                <label class="item item-input">
+                  <input type="email" placeholder="Email" ng-model="credentials.email">
+                </label>
+                <button class="button action-button button-block button-balanced" ng-click="requestPassword()">REQUEST
+                  PASSWORD RESET
+                </button>
                 <a class="button button-clear button-small button-stable forgot-password-button" ui-sref="intro.login">Login</a>
               </div>
+
             </div>
           </form>
         </div>
