--- a/www/templates/auth/password_reset.html
+++ b/www/templates/auth/password_reset.html
@@ -10,11 +10,13 @@
     <div class="content-wrapper">
       <div class="row row-no-padding everything-but-legal">
         <div class="col">
+
           <form class="row form-container" novalidate>
             <div class="col">
               <div class="list log-in">
                 <div class="item item-divider">
-                  <span>Request passsword reset</span>
+                  <h2>Request a passsword reset</h2>
+                  <span>Passwords are hard to remember. If you can't remember your password you can request a reset from AdventureMap.You will need access to the email account you used to register.</span>
                 </div>
                 <div class="item item-divider" ng-if="errorMessage">
                   <span class="error-message" ng-bind="errorMessage"></span>
@@ -30,23 +32,16 @@
                 <button class="button action-button button-block button-balanced" ng-click="requestPassword()">REQUEST
                   PASSWORD RESET
                 </button>
-                <a class="button button-clear button-small button-stable forgot-password-button" ui-sref="intro.login">Login</a>
+                <div class="col alt-actions-container">
+                  <a class="button button-clear button-small button-stable forgot-password-button"
+                     ui-sref="intro.login">Login</a>
+                </div>
               </div>
-
             </div>
           </form>
         </div>
       </div>
-      <div class="row row-no-padding legal-row">
-        <div class="col">
-          <p class="legal-text">
-            By logging in your agree to AdventureMaps's
-            <a ui-sref="intro.terms">Terms of Service</a>,
-            <a ui-sref="intro.privacy">Privacy Policy</a>,
-            <a ui-sref="intro.cookie">Cookie Policy</a> and
-            <a ui-sref="intro.disclaimer">Disclaimer</a>
-        </div>
-      </div>
+      <div ng-include src="'templates/partials/toc-links.html'"></div>
     </div>
   </ion-content>
 </ion-view>
