--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -397,6 +397,15 @@ COMMENTS
 SAVED ACTIVITIES
  */
 
+div.avatar img{
+  margin: 6px 6px 6px 6px;
+  max-width: px;
+  max-height: 40px;
+  /* width: 100%; */
+  /* height: 100%; */
+  border-radius: 50%;
+}
+
 div.title-div {
   padding-top: 5px;
   padding-left: 10px;
