--- a/www/templates/activities/show.html
+++ b/www/templates/activities/show.html
@@ -17,7 +17,7 @@
         <div id="small-map"></div>
       </div>
       <div class="item item-body">
-        <hscroller on-swipe-left="" on-swipe-right="" style="margin-top: 5px;">
+        <hscroller on-swipe-left="" on-swipe-right="" style="margin-top: 5px; margin-left: -2px !important;">
           <hcard ng-repeat="image in activity.images" index="{{$index}}" desc=""
                  image="{{image.file_attachment}}"></hcard>
         </hscroller>
