--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -399,10 +399,8 @@ SAVED ACTIVITIES
 
 div.avatar img{
   margin: 6px 6px 6px 6px;
-  max-width: px;
+  max-width: 40px;
   max-height: 40px;
-  /* width: 100%; */
-  /* height: 100%; */
   border-radius: 50%;
 }
 
