--- a/www/templates/activities/show.html
+++ b/www/templates/activities/show.html
@@ -105,7 +105,7 @@
         <div class="comment-user col-50">{{comment.user.name}}</div>
         <div class="comment-date col-50">{{comment.created_at}}</div>
       </div>
-      <div class="comment-body">{{comment.body}}</div>
+      <div class="comment-body item-text-wrap">{{comment.body}}</div>
     </div>
 
   </ion-content>
