--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,7 +1,7 @@
 <ion-view>
   <ion-nav-buttons side="left">
     <div class="bar bar-header item-input-inset" ng-if="hasFilters">
-      <label class="item-input-wrapper textbox-search" style="margin-top: -10px !important;">
+      <label class="item-input-wrapper textbox-search">
         <i class="icon ion-ios-search placeholder-icon"></i>
         <input type="search" placeholder="{{ 'SEARCH' | translate }}" ng-model="search.term"
                ng-change="performSearch(search.term)">
@@ -13,19 +13,18 @@
     AdventureMap
   </ion-nav-title>
   <ion-nav-buttons side="right">
-
     <a data-tap-disabled="true" class=" button button-icon icon positive" ng-click="openFilters(hasFilters);"
        ng-class="{'ion-ios-search':!hasFilters,'ion-ios-close-outline':hasFilters}"></a>
   </ion-nav-buttons>
 
   <div id="map-container"></div>
   <div id="search-results" ng-show="entries.length >= 0">
-    <div>
-
-      <ul ng-repeat="location in entries">
-        <li>{{ location.display_name }}</li>
-      </ul>
-    </div>
+    <ul class="results">
+      <li ng-repeat="location in entries"
+          data-lat="{{ location.lat }}"
+          data-long="{{ location.lon }}"
+      ng-click="navigateTo({lat: location.lat, long: location.lon })">{{ location.display_name }}</li>
+    </ul>
   </div>
   <div id="over-map">
     <div class="filter-btn">
