--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -7,7 +7,7 @@
       <p>{{activity.created_at}}</p>
     </div>
     <div class="buttons">
-      <button class="button ion-ios-arrow-up" ng-controller="activitiesController" onclick="window.plugins.socialsharing.shareViaFacebook('Message via Facebook', null /* img */, null /* url */, function() {console.log('share ok')}, function(errormsg){alert(errormsg)})">msg via Facebook (with errcallback)>
+      <button class="button ion-ios-arrow-up" ng-controller="activitiesController" ng-click="shareUsingFacebook('Message via Facebook', null, null)">
       </button>
 
     </div>
