--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -7,7 +7,8 @@
       <p>{{activity.created_at}}</p>
     </div>
     <div class="buttons">
-      <button class="button ion-ios-arrow-up" ng-controller="activitiesController" ng-click="shareUsingFacebook('Message via Facebook', null, null)">
+      <button class="button ion-ios-arrow-up" ng-controller="activitiesController"
+              ng-click="shareUsingFacebook({{activity.body}}, {{activity.images[0]}}, null)">
       </button>
 
     </div>
