--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -8,7 +8,7 @@
     </div>
     <div class="buttons">
       <button class="button ion-ios-arrow-up" ng-controller="activitiesController"
-              ng-click="shareUsingFacebook({{activity.body}}, {{activity.images[0]}}, null)">
+              ng-click="shareUsingFacebook(activity.body, activity.images[0], null)">
       </button>
 
     </div>
