--- a/www/templates/activities/show.html
+++ b/www/templates/activities/show.html
@@ -96,6 +96,16 @@
             </a>
           </div>
 
+          <div class="col col-20">
+            <a class="button white" ng-click="shareUsingFacebook(activity)">
+              <i class="icon ion-social-facebook"></i>
+            </a>
+
+            <a class="button white white">
+              <i class="icon ion-social-facebook"></i>
+            </a>
+          </div>
+
         </div>
       </div>
     </div>
