--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -79,7 +79,7 @@
           </a>
         </div>
 
-        <div class="col col-20">
+        <div class="col col-20" ng-controller="showActivityController">
             <a class="button white" ng-click="shareUsingFacebook(activity)">
               <i class="icon ion-social-facebook"></i>
             </a>
