--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -1,7 +1,7 @@
 <div class="list card" ng-repeat="activity in activities">
   <div ng-controller="showActivityController">
 
-    <div class="item item-avatar" ng-click="navigateToActivity(activity)">
+    <div class="item item-avatar" ng-click="navigateToUser(activity.user)">
       <img ng-src="{{activity.user.image ? activity.user.image : 'img/dummy_images/empty_image.svg'}}">
       <h2 class="activity_title">{{activity.user.name}}</h2>
       <p>{{activity.created_at}}</p>
