Fix problem with not showing profile tab

--- a/www/templates/profile/users-profile.html
+++ b/www/templates/profile/users-profile.html
@@ -29,17 +29,17 @@
       </div>
     </div>
     <ion-list class="profile-list">
-      <ion-item class="item item-icon-right list-item" ui-sref="app.my-saved-activities">
+      <ion-item class="item item-icon-right list-item" ui-sref="app.users-saved-activities">
         <span class="main-text">{{users.name}}'s Saved Activities</span>
         <span class="badge">{{users.counts.my_saved_activities}}</span>
         <i class="icon ion-ios-arrow-right"></i>
       </ion-item>
-      <ion-item class="item item-icon-right list-item" ui-sref="app.my-activities">
+      <ion-item class="item item-icon-right list-item" ui-sref="app.users-activities">
         <span class="main-text">{{users.name}}'s Activities</span>
         <span class="badge">{{users.counts.my_activities}}</span>
         <i class="icon ion-ios-arrow-right"></i>
       </ion-item>
-      <ion-item class="item item-icon-right list-item" ui-sref="app.followings">
+      <ion-item class="item item-icon-right list-item" ui-sref="app.users-followings">
         <span class="main-text">{{users.name}}'s Connections</span>
         <span class="badge">{{users.counts.followings}}</span>
         <i class="icon ion-ios-arrow-right"></i>
