--- a/www/templates/directives/my-activities.html
+++ b/www/templates/directives/my-activities.html
@@ -1,7 +1,7 @@
 <div class="list card" ng-repeat="activity in mine">
   <div ng-controller="showActivityController">
   <div class="item item-divider row-no-padding white" ng-click="navigateToActivity(activity)">
-    <div class="row">
+    <div class="row" ng-click="navigateToUser(activity.user)">
       <div class="col-10 avatar"><img ng-src="{{activity.user.image ? activity.user.image : 'img/dummy_images/empty_image.svg'}}"></div>
       <div class="col-60 title-div"><h2>{{activity.user.name}}</h2></div>
       <div class="col-20 comment-date date-div">{{activity.created_at}}</p></div>
