--- a/www/templates/profile/users-profile.html
+++ b/www/templates/profile/users-profile.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false" can-swipe-back="false" class="profile-view" view-title="Profile" cache-view="false">
+<ion-view cache-view="false" can-swipe-back="true" class="profile-view">
 
   <ion-content scroll="false">
     <div class="row row-no-padding">
@@ -29,17 +29,17 @@
       </div>
     </div>
     <ion-list class="profile-list">
-      <ion-item class="item item-icon-right list-item" ui-sref="app.users-saved-activities">
+      <ion-item class="item item-icon-right list-item" ui-sref="app.my-saved-activities">
         <span class="main-text">{{users.name}}'s Saved Activities</span>
         <span class="badge">{{users.counts.my_saved_activities}}</span>
         <i class="icon ion-ios-arrow-right"></i>
       </ion-item>
-      <ion-item class="item item-icon-right list-item" ui-sref="app.users-activities">
+      <ion-item class="item item-icon-right list-item" ui-sref="app.my-activities">
         <span class="main-text">{{users.name}}'s Activities</span>
         <span class="badge">{{users.counts.my_activities}}</span>
         <i class="icon ion-ios-arrow-right"></i>
       </ion-item>
-      <ion-item class="item item-icon-right list-item" ui-sref="app.users-followings">
+      <ion-item class="item item-icon-right list-item" ui-sref="app.followings">
         <span class="main-text">{{users.name}}'s Connections</span>
         <span class="badge">{{users.counts.followings}}</span>
         <i class="icon ion-ios-arrow-right"></i>
