more refactoring - missed to do a merge after last edit

--- a/scss/common/common.styles.scss
+++ b/scss/common/common.styles.scss
@@ -85,6 +85,14 @@ ion-spinner.spinner-on-load {
   margin: 0 !important;
 }
 
+.share-button {
+  z-index: 99;
+  position: absolute;
+  left: 0.5rem;
+  top: 4rem;
+  margin: auto;
+}
+
 
 
 
