--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -4,12 +4,19 @@
 
     <div class="item item-avatar" ng-click="navigateToActivity(activity)">
       <img ng-src="{{activity.user.image ? activity.user.image : 'img/dummy_images/empty_image.svg'}}">
+
       <h2 class="activity_title">{{activity.user.name}}</h2>
       <p>{{activity.created_at}}</p>
-    </div>
 
-    <div ng-click="navigateToActivity(activity)">
-      <display-first-image images_for="{{activity}}"></display-first-image>
+    </div>
+    <div>
+      <display-first-image images_for="{{activity}}" ng-click="navigateToActivity(activity)"></display-first-image>
+      <div class="share-button">
+        <button class="button icon ion-social-facebook" ng-click="shareUsingFacebook(activity, user)"></button>
+        <button class="button icon ion-social-facebook" ng-click="shareUsingFacebook(activity, user)"></button>
+      </div>
+
+
     </div>
 
     <div class="padding" ng-click="navigateToActivity(activity)">
@@ -22,10 +29,11 @@
       </p>
     </div>
 
+
     <div class="item item-divider row-no-padding white">
       <div class="button-bar">
 
-        <div class="col col-20">
+        <div class="col col-25">
           <span ng-if=activity.user.likes ng-click="unlikeActivity(activity.id);
             activity.user.likes = !activity.user.likes; activity.likes_count = activity.likes_count - 1;">
             <a class="button white blue">
@@ -41,7 +49,7 @@
           </div>
         </div>
 
-        <div class="col col-20">
+        <div class="col col-25">
           <span ng-if=activity.user.saves ng-click="unsaveActivity(activity.id);
             activity.user.saves = !activity.user.saves; activity.saves_count = activity.saves_count - 1;">
             <a class="button white blue">
@@ -57,7 +65,7 @@
           </span>
         </div>
 
-        <div class="col col-20">
+        <div class="col col-25">
           <span ng-if=activity.user.following ng-click="unfollowUser(activity.user.id);
             activity.user.following = !activity.user.following; activity.user.followers_count = activity.user.followers_count - 1">
             <a class="button white blue">
@@ -73,16 +81,10 @@
           </span>
         </div>
 
-        <div class="col col-20" ng-click="navigateToActivity(activity)">
+        <div class="col col-25" ng-click="navigateToActivity(activity)">
           <a class="button white">
             <i class="icon ion-chatboxes"></i>
           </a>
-        </div>
-
-        <div class="col col-20" ng-controller="showActivityController">
-            <a class="button white" ng-click="shareUsingFacebook(activity)">
-              <i class="icon ion-social-facebook"></i>
-            </a>
         </div>
       </div>
     </div>
