--- a/www/templates/profile/users-profile.html
+++ b/www/templates/profile/users-profile.html
@@ -1,6 +1,6 @@
-<ion-view cache-view="false" can-swipe-back="true" class="profile-view">
+<ion-view cache-view="false" can-swipe-back="true" class="profile-view" title="{{user.name}}">
 
-  <ion-content scroll="false">
+  <ion-content scroll="true">
     <div class="row row-no-padding">
       <div class="col user-col">
         <div class="user-image-container" ng-controller="usersProfileController">
@@ -8,20 +8,19 @@
             <img ng-src="{{profileImage()}}" spinner-on-load>
           </pre-img>
         </div>
-        <h2 class="user-name">{{user.name}}</h2>
-        <a ui-sref="main.profile">
-          <h5 class="username">@{{user.nickname}}</h5>
-        </a>
+        <h5 class="username" ng-if="user.nickname">
+          @{{user.nickname}}
+        </h5>
         <p class="user-social" ng-if="user.description">
           {{user.description}}
         </p>
         <p class="user-social">
           <i class="ion-heart"></i>
-          <span>74</span> &nbsp;
+          <span>{{user.followers_count}}</span> &nbsp;
           <i class="ion-location"></i>
           <span>{{user.city}}</span>
         </p>
-        <div class="row">
+        <div class="row" ng-if="user.interest_list">
           <div class="col">
             <p class="user-bio">{{user.interest_list}}</p>
           </div>
@@ -29,8 +28,15 @@
       </div>
     </div>
     <ion-list class="profile-list">
+      <ion-item>{{user.name}}'s {{"PROFILE.ACTIVITIES" | translate}}</ion-item>
       <ion-item>
-        Test
+        <div ng-repeat="activity in user.activities">
+          <div ng-click="navigateToActivity(activity)">
+            <h3>{{activity.title}}</h3>
+            <p>{{activity.created_at}}</p>
+            <display-first-image images_for="{{activity}}"></display-first-image>
+          </div>
+        </div>
       </ion-item>
     </ion-list>
   </ion-content>
