--- a/www/templates/auth/activity_selection.html
+++ b/www/templates/auth/activity_selection.html
@@ -7,7 +7,7 @@
     <h3 class="title">{{ "SELECT_FAVORITES" | translate}}</h3>
   </ion-header-bar>
 
-  <ion-content class="padding has-header">
+  <ion-content class="has-header">
     <div class="activity-images" ng-repeat="uri in activity_images">
       <!-- show a faded image with gray text if unselected, or full opacity and white if selected -->
       <div ng-if="signupForm.category[$index]"
