fixes logic for activity selection when signing up with facebook

--- a/www/templates/auth/signup.html
+++ b/www/templates/auth/signup.html
@@ -16,7 +16,7 @@
                 <span class="error-message" ng-bind="errorMessage"></span>
               </div>
               <label class="item item-input custom">
-                <input type="text" placeholder="{{ 'NAME' | translate}}" ng-model="signupForm.name">
+                <input type="text" placeholder="{{ 'NAME' | translate}}" ng-model="signupForm.nickname">
               </label>
               <label class="item item-input custom">
                 <input type="email" placeholder="{{ 'EMAIL' | translate}}" ng-model="signupForm.email">
