fixes failing updateFacebookUser function

--- a/www/templates/profile/edit.html
+++ b/www/templates/profile/edit.html
@@ -2,10 +2,10 @@
   <ion-header-bar class="bar-positive">
     <div class="buttons">
       <button class="button button-clear" ng-click="editProfileModal.hide()">
-        Cancel
+        {{ "ELEMENTS.CANCEL" | translate}}
       </button>
     </div>
-    <h1 class="title">Update Profile</h1>
+    <h1 class="title">{{ "PROFILE.UPDATE_PROFILE" | translate}}</h1>
     <div class="buttons">
       <button class="button button-clear" ng-click="updateProfile()">
         Update
